# linglong

./: .gitignore  LICENSE  README.md  environment.yaml  push-to-hub.py  pyproject.toml  requirements-evaluation.txt  requirements-torch.txt  requirements.txt  setup.py  tutorial.md
cgpt/: __init__.py
cgpt/models/: basic_model.py
cgpt/train/: losses.py  optimizer.py
cgpt_torch/models/: basic_model.py
cgpt_torch/train/: __init__.py
cgpt_torch/utils/: __init__.py  utils.py
common/dicts/: similar-pronunciation.json  similar-shape.json
common/legacy-model-configs/: 317M-WSZ1024L24.yaml  CPM2-106M-WSZ1024L12.yaml  PY-318M-WSZ1024L24.yaml  R-317M-WSZ1024L24.yaml
common/model-configs/: 106M-WSZ1024L12.yaml  317M-WSZ1024L24-LoRA-eva.yaml  317M-WSZ1024L24-LoRA.yaml  317M-WSZ1024L24-PROMPT-LoRA.yaml  317M-WSZ1024L24-PROMPT.yaml  317M-WSZ1024L24.json  (+3 more)
datasets/: evaluation.py  evaluation.sh  fine-tuning.py  fine-tuning.sh  pre-training.py  pre-training.sh  rlhf.py  streaming-pre-training.py  streaming-pre-training.sh
evaluation/: evaluate-parallel.py  evaluate.py  evaluate.sh  update_config.py  update_rank.py
generation/: api-example.py  api-example.sh  generate.py  generate.sh  pipeline-chat-example.py  pipeline-chat-example.sh  pipeline-example.py  pipeline-example.sh
linglong/: __init__.py  configuration.py  configuration_linglong.py  generation.py  modeling.py  modeling_linglong.py  records.py  stubs.py  tokenization.py  tokenization_linglong.py  tokenization_linglong_fast.py  tokenization_utils.py  utils.py
lora_test/: load_checkpoint.py  plot_lora_weight.py  plot_weight.py  renamed-ckpt.py  reparameter-ckpt.py
mcpt/: __init__.py  generation.py  records.py  sampling.py  stubs.py  tokenization.py  utils.py
training/: fine-tune-lora.sh  fine-tune.sh  record.md  train-ds.py  train-lora.py  train-prompt-all.py  train-prompt-lora.py  train-prompt-two-stage-lora.py  train-prompt-two-stage.py  train-prompt.py  train.py
utils/: convert-model.py  push-to-hub.py  tf2torch.py  tf2torch.sh  tf2transformers.sh  torch2tf.py  torch2tf.sh  torch2transformers.py  torch2transformers.sh  transformers2tf.sh  transformers2torch.py  transformers2torch.sh  view-tfrecord.py  view-tfrecord.sh
(+100 files in other folders)
