[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'linglong'
version = '0.10.0'
description = 'A small-scale Chinese pretrained language model.'
readme = 'README.md'
requires-python = '>=3.11,<3.13'
license = {file = 'LICENSE'}
authors = [
    {name = 'NKCS Intelligent Computing Lab', email = 'zyzhong@mail.nankai.edu.cn'},
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Repository = 'https://github.com/NKCSICLab/linglong'

[tool.setuptools]
platforms = ['any']

[tool.setuptools.packages.find]
include = ['linglong', 'linglong.*']
